<?xml version="1.0"?>
<package>
  <name>pointcloud_writer</name>
  <version>0.1.0</version>
  <description>ROS node to save pointcloud from a ROS PointCloud2 topic</description>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

</package>
